posting sqlite changes

--- a/_notebooks/2023-03-13-AP-unit2-4a.ipynb
+++ b/_notebooks/2023-03-13-AP-unit2-4a.ipynb
@@ -41,12 +41,14 @@
     "\n",
     "- Comment on where you have observed these working?  Provide a defintion of purpose.\n",
     "    1. Flask app object\n",
-    "    2. SQLAlchemy db object\n"
+    "        - is a python website useful for making apis\n",
+    "    2. SQLAlchemy db object\n",
+    "        - is a way of abstracting SQL to be used with python and flask\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,18 +288,27 @@
     "\n",
     "- Comment on how these work?\n",
     "    1. Create All Tables from db Object\n",
-    "        Uses the schema of Users to build a table with the necessary data\n",
+    "        - Uses the schema of Users to build a table with the necessary data\n",
     "    2. User Object Constructors\n",
-    "        Each u1, u2, etc are objects of class user which are created when they are initialized\n",
+    "        - Each u1, u2, etc are objects of class user which are created when they are initialized\n",
     "    3. Try / Except \n",
-    "        The Try/Except tries to add each object created above to the database and if it fails, doesn't add the object.\n"
+    "        - The Try/Except tries to add each object created above to the database and if it fails, doesn't add the object.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_399/4082043660.py:47: SAWarning: New instance <ChessUsers at 0x7f2aa5f91c10> with identity key (<class '__main__.ChessUsers'>, (100,), None) conflicts with persistent instance <ChessUsers at 0x7f2ac06eb160>\n",
+      "  db.session.commit()  # SqlAlchemy \"unit of work pattern\" requires a manual commit\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"Database Creation and Testing \"\"\"\n",
     "\n",
@@ -332,12 +343,14 @@
     "\n",
     "- Comment on purpose of following\n",
     "    1. User.query.filter_by\n",
-    "    2. user.password"
+    "        - returns a user object from db based on id\n",
+    "    2. user.password\n",
+    "        - password attribute of objeect user"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,27 +384,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'uid': 102, 'name': 'dash', 'password': 'sha256$ZhF6OReNwq5ns80j$c06bb4c52d8dd6805eb046c6a5aa8074317df75a8b715b3714686ae67fa3e259', 'dob': '05-05-0055', 'games': ''}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def changePassword(name, password, newPassword):\n",
     "    with app.app_context():\n",
@@ -416,14 +411,18 @@
     "\n",
     "- Comment on purpose of following\n",
     "    1. user.find_by_uid() and try/except\n",
+    "        - returns a user object from the db based on given id\n",
     "    2. user = User(...)\n",
+    "        - Creates a new user object using class User\n",
     "    3. user.dob and try/except\n",
-    "    4. user.create() and try/except"
+    "        - user.dob is the dob attribute of the created user object\n",
+    "    4. user.create() and try/except\n",
+    "        - user.create() runs the create function on the user object, adding the data in the object to the database"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +430,7 @@
      "output_type": "stream",
      "text": [
       "Created\n",
-      " {'uid': 103, 'name': 'd', 'password': 'sha256$afHTxeQU8JkjBKsN$b7f985a6e66892a14d9fb6fbe6dadf95197c328d3e350175109e2d4328f122dc', 'dob': 'd', 'games': ''}\n"
+      " {'uid': 101, 'name': 'dash', 'password': 'sha256$BGL7dNOC0ATXlDIf$cde4267aba7c992d9e7940d8228fa18d45c31ba277d61913607db44310b2af13', 'dob': '05050050', 'games': ''}\n"
      ]
     }
    ],
@@ -478,12 +477,14 @@
     "\n",
     "- Comment on purpose of following\n",
     "    1. User.query.all\n",
-    "    2. json_ready assignment, google List Comprehension"
+    "    Returns a list of all of the user objects in the db\n",
+    "    2. json_ready assignment, google List Comprehension\n",
+    "    makes a json of all of the users in the table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -491,22 +492,17 @@
       "text/plain": [
        "[{'uid': 100,\n",
        "  'name': 'Toby',\n",
-       "  'password': 'sha256$TwmiyNJd2q7JPiG5$18d20e55d0bb51e51e37f3e247ef4c01a0904898a4c839efa30afa8e9a04348a',\n",
+       "  'password': 'sha256$zqq8WeeStZoA4OHQ$ebc0eb41c502db9cb89c4ad867b75d856113e065cd3404a9e3ab2ef6a26eb737',\n",
        "  'dob': '11-11-1111',\n",
        "  'games': ''},\n",
-       " {'uid': 102,\n",
+       " {'uid': 101,\n",
        "  'name': 'dash',\n",
-       "  'password': 'sha256$ZhF6OReNwq5ns80j$c06bb4c52d8dd6805eb046c6a5aa8074317df75a8b715b3714686ae67fa3e259',\n",
-       "  'dob': '05-05-0055',\n",
-       "  'games': ''},\n",
-       " {'uid': 103,\n",
-       "  'name': 'd',\n",
-       "  'password': 'sha256$afHTxeQU8JkjBKsN$b7f985a6e66892a14d9fb6fbe6dadf95197c328d3e350175109e2d4328f122dc',\n",
-       "  'dob': 'd',\n",
+       "  'password': 'sha256$BGL7dNOC0ATXlDIf$cde4267aba7c992d9e7940d8228fa18d45c31ba277d61913607db44310b2af13',\n",
+       "  'dob': '05050050',\n",
        "  'games': ''}]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -554,22 +550,17 @@
       "text/plain": [
        "[{'uid': 100,\n",
        "  'name': 'Toby',\n",
-       "  'password': 'sha256$TwmiyNJd2q7JPiG5$18d20e55d0bb51e51e37f3e247ef4c01a0904898a4c839efa30afa8e9a04348a',\n",
+       "  'password': 'sha256$zqq8WeeStZoA4OHQ$ebc0eb41c502db9cb89c4ad867b75d856113e065cd3404a9e3ab2ef6a26eb737',\n",
        "  'dob': '11-11-1111',\n",
        "  'games': ''},\n",
-       " {'uid': 102,\n",
+       " {'uid': 101,\n",
        "  'name': 'dash',\n",
-       "  'password': 'sha256$ZhF6OReNwq5ns80j$c06bb4c52d8dd6805eb046c6a5aa8074317df75a8b715b3714686ae67fa3e259',\n",
-       "  'dob': '05-05-0055',\n",
-       "  'games': ''},\n",
-       " {'uid': 103,\n",
-       "  'name': 'd',\n",
-       "  'password': 'sha256$afHTxeQU8JkjBKsN$b7f985a6e66892a14d9fb6fbe6dadf95197c328d3e350175109e2d4328f122dc',\n",
-       "  'dob': 'd',\n",
+       "  'password': 'sha256$BGL7dNOC0ATXlDIf$cde4267aba7c992d9e7940d8228fa18d45c31ba277d61913607db44310b2af13',\n",
+       "  'dob': '05050050',\n",
        "  'games': ''}]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,31 +571,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"deleted {'uid': 103, 'name': 'd', 'password': 'sha256$afHTxeQU8JkjBKsN$b7f985a6e66892a14d9fb6fbe6dadf95197c328d3e350175109e2d4328f122dc', 'dob': 'd', 'games': ''}\""
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def deleteUser(uid):\n",
     "    with app.app_context():\n",
     "        user = getUser(uid)\n",
     "        return user.delete()\n",
-    "deleteUser(103)"
+    "# deleteUser(103)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -612,17 +592,17 @@
       "text/plain": [
        "[{'uid': 100,\n",
        "  'name': 'Toby',\n",
-       "  'password': 'sha256$TwmiyNJd2q7JPiG5$18d20e55d0bb51e51e37f3e247ef4c01a0904898a4c839efa30afa8e9a04348a',\n",
+       "  'password': 'sha256$zqq8WeeStZoA4OHQ$ebc0eb41c502db9cb89c4ad867b75d856113e065cd3404a9e3ab2ef6a26eb737',\n",
        "  'dob': '11-11-1111',\n",
        "  'games': ''},\n",
-       " {'uid': 102,\n",
+       " {'uid': 101,\n",
        "  'name': 'dash',\n",
-       "  'password': 'sha256$ZhF6OReNwq5ns80j$c06bb4c52d8dd6805eb046c6a5aa8074317df75a8b715b3714686ae67fa3e259',\n",
-       "  'dob': '05-05-0055',\n",
+       "  'password': 'sha256$BGL7dNOC0ATXlDIf$cde4267aba7c992d9e7940d8228fa18d45c31ba277d61913607db44310b2af13',\n",
+       "  'dob': '05050050',\n",
        "  'games': ''}]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
