--- a/_notebooks/2023-03-22-DS-space_time_complexity.ipynb
+++ b/_notebooks/2023-03-22-DS-space_time_complexity.ipynb
@@ -604,6 +604,7 @@
     "- Record your findings when testing the time elapsed of the different algorithms.\n",
     "    - Bigger time complexity and bigger O things took longer than linear or logorithmic things\n",
     "- Although we will go more in depth later, time complexity is a key concept that relates to the different sorting algorithms. Do some basic research on the different types of sorting algorithms and their time complexity.\n",
+    "    - Bogosort is my favorite sorting algorithm. It randomizes the list and checks if it is sorted, then randomizes the list again. It can theoretically be the best sorting algorithm if you are lucky, but in the worst case scenario it has a time complexity of O(n!). Fun fact, all sorting algorithms technically have an absurdly high time complexity like O(n!) because big O notation measures the upper limit.\n",
     "- Why is time and space complexity important when choosing an algorithm?\n",
     "    - You need to find an algorithm that will be both fast and space efficient, and depending on the use case, one that is simple or complicated. Faster and cheaper algorithms will increase performance but may be at the cost of readability.\n",
     "- Should you always use a constant time algorithm / Should you never use an exponential time algorithm? Explain? \n",
