--- a/_notebooks/2023-04-25-P3M-Simulations.ipynb
+++ b/_notebooks/2023-04-25-P3M-Simulations.ipynb
@@ -7,13 +7,7 @@
    "source": [
     "# P3-M 4/25 Simulations\n",
     "> Creating simulations using pandas and python libraries\n",
-    "- toc: true\n",
-    "- badges: false\n",
-    "- comments: true\n",
-    "- author: Shruthi Malayath, Lina Awad, Lydia Cho, Sarah Liu, Jake Warren\n",
-    "- categories: [student]\n",
-    "- type: ap\n",
-    "- week: 31"
+    "- toc: true"
    ]
   },
   {
