--- a/_notebooks/2023-04-27-P3M-Team-SnapShot-Student.ipynb
+++ b/_notebooks/2023-04-27-P3M-Team-SnapShot-Student.ipynb
@@ -6,10 +6,7 @@
    "metadata": {},
    "source": [
     "# Big Idea 2 - Data Related to User Guide\n",
-    "> A guide to adding data related to user (Big Idea 2)\n",
-    "  \n",
-    "- title: Big Idea 2 - Data Related to User Guide\n",
-    "- author: Jeffrey Lee, Dylan Garrett, Derek Sol, Jagger Klein, Benjamin Lee, Luke Riggins, Saavan Gade"
+    "> A guide to adding data related to user (Big Idea 2)"
    ]
   },
   {
