--- a/_notebooks/2023-05-15-DS-sorting.ipynb
+++ b/_notebooks/2023-05-15-DS-sorting.ipynb
@@ -6,17 +6,7 @@
    "metadata": {},
    "source": [
     "# Sorting Algorithms\n",
-    "> Working with Data Structures and manipulating data.\n",
-    "\n",
-    "- toc: true"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[wget link](https://raw.githubusercontent.com/nighthawkcoders/APCSP/master/_notebooks/2023-05-15-DS-sorting.ipynb)"
+    "> Working with Data Structures and manipulating data."
    ]
   },
   {
